--- a/.vitepress/styles/main.css
+++ b/.vitepress/styles/main.css
@@ -242,17 +242,17 @@ html, body {
   GitHub 链接按钮样式
 */
 
-.VPHero.VPHomeHero .actions a[href="https://github.com/nolebase/integrations"] {
+.VPHero.VPHomeHero .actions a[href="https://github.com/naixyc/integrations"] {
   color: white;
   background-color: #000;
 }
 
-.VPHero.VPHomeHero .actions a[href="https://github.com/nolebase/integrations"]:hover {
+.VPHero.VPHomeHero .actions a[href="https://github.com/naixyc/integrations"]:hover {
   color: white;
   background-color: #4b4b4b;
 }
 
-.VPHero.VPHomeHero .actions a[href="https://github.com/nolebase/integrations"]:active {
+.VPHero.VPHomeHero .actions a[href="https://github.com/naixyc/integrations"]:active {
   color: white;
   background-color: #000;
 }
@@ -261,17 +261,17 @@ html, body {
   暗色模式下 GitHub 链接按钮样式
 */
 
-.dark .VPHero.VPHomeHero .actions a[href="https://github.com/nolebase/integrations"] {
+.dark .VPHero.VPHomeHero .actions a[href="https://github.com/naixyc/integrations"] {
   color: white;
   background-color: #4b4b4b;
 }
 
-.dark .VPHero.VPHomeHero .actions a[href="https://github.com/nolebase/integrations"]:hover {
+.dark .VPHero.VPHomeHero .actions a[href="https://github.com/naixyc/integrations"]:hover {
   color: white;
   background-color: #252525;
 }
 
-.dark .VPHero.VPHomeHero .actions a[href="https://github.com/nolebase/integrations"]:active {
+.dark .VPHero.VPHomeHero .actions a[href="https://github.com/naixyc/integrations"]:active {
   color: white;
   background-color: #4b4b4b;
 }
